--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nervatura-docs",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Nervatura Docs",
   "keywords": [
     "business management",
@@ -33,8 +33,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "swagger-ui-react": "^3.24.0",
+    "react-scripts": "3.4.1",
+    "swagger-ui-react": "3.24.3",
     "w3-css": "^4.1.0"
   },
   "scripts": {
